// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-alert should render error variant with alert icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="error">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-error" role="alert">
    <svg class="mi-alert mi-solid modus-wc-alert-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
      <path d="M22.87 19.04 13.72 3c-.76-1.33-2.68-1.33-3.44 0L1.13 19.04C.38 20.36 1.33 22 2.85 22h18.3c1.52 0 2.47-1.64 1.72-2.96m-11.92-9.9c0-.63.45-1.15 1.06-1.15s1.06.51 1.06 1.15c0 .04-.01.12-.01.14l-.39 5.04c-.04.44-.3.7-.66.7s-.62-.26-.66-.7l-.4-5.04zm1.06 9.89c-.67 0-1.21-.54-1.21-1.21s.54-1.19 1.21-1.19 1.21.54 1.21 1.19-.54 1.21-1.21 1.21"></path>
    </svg>
    <div>
      <modus-wc-typography>
        <!---->
        <h3 class="modus-wc-typography">
          Custom title
        </h3>
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render info variant with info icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="info">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-info" role="alert">
    <svg class="mi-info mi-solid modus-wc-alert-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1.06 14.15c0 .55-.45 1-1 1s-1-.45-1-1v-4.14c0-.55.45-1 1-1s1 .45 1 1zm-1-7.11c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1"></path>
    </svg>
    <div>
      <modus-wc-typography>
        <!---->
        <h3 class="modus-wc-typography">
          Custom title
        </h3>
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render success variant with check_circle icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="success">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-success" role="alert">
    <svg class="mi-check-circle mi-solid modus-wc-alert-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m5.56 7.74-6.39 6.4a1 1 0 0 1-1.42-.01l-3.3-3.34-.01-.01a.993.993 0 0 1 .01-1.4.996.996 0 0 1 1.41 0l2.6 2.62 5.68-5.69a.996.996 0 0 1 1.41 0v.02h.01c.39.39.39 1.02 0 1.41"></path>
    </svg>
    <div>
      <modus-wc-typography>
        <!---->
        <h3 class="modus-wc-typography">
          Custom title
        </h3>
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render warning variant with info icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="warning">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-warning" role="alert">
    <svg class="mi-solid mi-warning modus-wc-alert-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-1.06 5.63c0-.63.45-1.15 1.06-1.15s1.06.51 1.06 1.15c0 .04-.01.12-.01.14l-.39 5.04c-.04.44-.3.7-.66.7s-.62-.26-.66-.7l-.4-5.04zM12 17.52c-.67 0-1.21-.54-1.21-1.21s.54-1.19 1.21-1.19 1.21.54 1.21 1.19-.54 1.21-1.21 1.21"></path>
    </svg>
    <div>
      <modus-wc-typography>
        <!---->
        <h3 class="modus-wc-typography">
          Custom title
        </h3>
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render with custom props 1`] = `
<modus-wc-alert alert-description="Custom description" alert-title="Custom title" custom-class="test-class" icon="help" variant="info">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-info test-class" role="alert">
    <modus-wc-icon custom-class="modus-wc-alert-icon" name="help"></modus-wc-icon>
    <div>
      <modus-wc-typography variant="h3" weight="bold">
        Custom title
      </modus-wc-typography>
      <modus-wc-typography>
        Custom description
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render with default props 1`] = `
<modus-wc-alert alerttitle="Custom title">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-info" role="alert">
    <svg class="mi-info mi-solid modus-wc-alert-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1.06 14.15c0 .55-.45 1-1 1s-1-.45-1-1v-4.14c0-.55.45-1 1-1s1 .45 1 1zm-1-7.11c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1"></path>
    </svg>
    <div>
      <modus-wc-typography>
        <!---->
        <h3 class="modus-wc-typography"></h3>
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;
